passage en Angular5

--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -1,6 +1,6 @@
+<ng-header-nav-bar></ng-header-nav-bar>  
 <div id="app">
-  <div id="page-wrapper">
-          <header-nav-bar></header-nav-bar>
+  <div id="page-wrapper">  
           <!-- Header -->
             <div id="header-wrapper">
               <div id="header">
