--- a/frontEnd/src/app/blog/blog.component.html
+++ b/frontEnd/src/app/blog/blog.component.html
@@ -5,5 +5,5 @@
       <p>  {{i}} - {{blog.content}}</p>
       <footer>{{blog.created_at | date: 'dd/MM/yyyy'}}</footer>
     </blockquote>
-    <now></now>
+    <ng-now></ng-now>
 </div>
