--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -12,38 +12,21 @@
                 <!-- Nav -->
                   <nav id="nav">
                     <ul>
-                      <li class="current"><a href="index.html">Home</a></li>
+                      <li class="current"><a href="index.html">Acceuil</a></li>
                       <li>
                         <a href="#">Dropdown</a>
-                        <ul>
-                         <!--<li><a href="#" [routerLink]="['/blogs']">Blog</a></li>-->
-                          <li><a href="#">menu 2</a></li>
-                          <li><a href="#">Magna phasellus</a></li>
-                          <li><a href="#">Etiam dolore nisl</a></li>
-                          <li>
-                            <a href="#">Phasellus consequat</a>
-                            <ul>
-                              <li><a href="#">Magna phasellus</a></li>
-                              <li><a href="#">Etiam dolore nisl</a></li>
-                              <li><a href="#">Veroeros feugiat</a></li>
-                              <li><a href="#">Nisl sed aliquam</a></li>
-                              <li><a href="#">Dolore adipiscing</a></li>
-                            </ul>
-                          </li>
-                          <li><a href="#">Veroeros feugiat</a></li>
-                        </ul>
                       </li>
-                      <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                      <li><a href="right-sidebar.html">Right Sidebar</a></li>
-                      <li><a href="no-sidebar.html">No Sidebar</a></li>
+                      <li><a href="blogs.html">Blogs</a></li>
+                      <li><a href="informations.html">Informations</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </nav>
     
                 <!-- Banner -->
                   <section id="banner">
                     <header>
-                      <h2>Howdy. This is Dopetrope.</h2>
-                      <p>A responsive template by HTML5 UP</p>
+                      <h2>Developer Blogs.</h2>
+                      <p></p>
                     </header>
                   </section>
               </div>
@@ -52,12 +35,6 @@
           <!-- Main -->
             <div id="main-wrapper">
               <div class="container">
-                <!--  <div class="row">
-                      <div class="col-xs-12">
-                        <router-outlet>
-                        </router-outlet>
-                      </div>
-                    </div>-->
                 <div class="row">
                   <div class="12u">
     
@@ -67,88 +44,13 @@
                           <h2>Derniers sujets</h2>
                         </header>
                         <div class="row">
-                          <div class="4u 12u(mobile)">
-                            <section class="box">
-                              <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                              <header>
-                                <h3>Ipsum feugiat et dolor</h3>
-                              </header>
-                              <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                              <footer>
-                                <a href="#" class="button alt">Find out more</a>
-                              </footer>
-                            </section>
-                          </div>
-                          <div class="4u 12u(mobile)">
-                            <section class="box">
-                              <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                              <header>
-                                <h3>Sed etiam lorem nulla</h3>
-                              </header>
-                              <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                              <footer>
-                                <a href="#" class="button alt">Find out more</a>
-                              </footer>
-                            </section>
-                          </div>
-                          <div class="4u 12u(mobile)">
-                            <section class="box">
-                              <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-                              <header>
-                                <h3>Consequat et tempus</h3>
-                              </header>
-                              <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                              <footer>
-                                <a href="#" class="button alt">Find out more</a>
-                              </footer>
-                            </section>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="4u 12u(mobile)">
-                            <section class="box">
-                              <a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-                              <header>
-                                <h3>Blandit sed adipiscing</h3>
-                              </header>
-                              <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                              <footer>
-                                <a href="#" class="button alt">Find out more</a>
-                              </footer>
-                            </section>
-                          </div>
-                          <div class="4u 12u(mobile)">
-                            <section class="box">
-                              <a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-                              <header>
-                                <h3>Etiam nisl consequat</h3>
-                              </header>
-                              <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                              <footer>
-                                <a href="#" class="button alt">Find out more</a>
-                              </footer>
-                            </section>
-                          </div>
-                          <div class="4u 12u(mobile)">
-                            <section class="box">
-                              <a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-                              <header>
-                                <h3>Dolore nisl feugiat</h3>
-                              </header>
-                              <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                              <footer>
-                                <a href="#" class="button alt">Find out more</a>
-                              </footer>
-                            </section>
-                          </div>
+                          <ng-app-blogs-summary></ng-app-blogs-summary>  
                         </div>
                       </section>
-    
                   </div>
                 </div>
                 <div class="row">
                   <div class="12u">
-    
                   </div>
                 </div>
               </div>
