--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -1,157 +1,3 @@
-<<<<<<< HEAD
-<header-nav-bar></header-nav-bar>
-<div id="app">
-    <div id="page-wrapper">
-            <!-- Header -->
-              <div id="header-wrapper">
-                <div id="header">
-                  <!-- Logo -->
-                        <!-- Logo -->
-                  <div id="logo">
-                    <img src="images/logo3.png">
-                  </div>
-                  <!-- Nav -->
-                    <nav id="nav">
-                      <ul>
-                        <li class="current"><a href="index.html">Home</a></li>
-                        <li>
-                          <a href="#">Dropdown</a>
-                          <ul>
-                           <!-- <li><a href="#" [routerLink]="['/blogs']">Blog</a></li>-->
-                            <li><a href="#">menu 2</a></li>
-                            <li><a href="#">Magna phasellus</a></li>
-                            <li><a href="#">Etiam dolore nisl</a></li>
-                            <li>
-                              <a href="#">Phasellus consequat</a>
-                              <ul>
-                                <li><a href="#">Magna phasellus</a></li>
-                                <li><a href="#">Etiam dolore nisl</a></li>
-                                <li><a href="#">Veroeros feugiat</a></li>
-                                <li><a href="#">Nisl sed aliquam</a></li>
-                                <li><a href="#">Dolore adipiscing</a></li>
-                              </ul>
-                            </li>
-                            <li><a href="#">Veroeros feugiat</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                        <li><a href="right-sidebar.html">Right Sidebar</a></li>
-                        <li><a href="no-sidebar.html">No Sidebar</a></li>
-                      </ul>
-                    </nav>
-      
-                  <!-- Banner -->
-                    <section id="banner">
-                      <header>
-                        <h2>Howdy. This is Dopetrope.</h2>
-                        <p>A responsive template by HTML5 UP</p>
-                      </header>
-                    </section>
-                </div>
-              </div>
-      
-            <!-- Main -->
-              <div id="main-wrapper">
-                <div class="container">
-                  <!--  <div class="row">
-                        <div class="col-xs-12">
-                          <router-outlet>
-                          </router-outlet>
-                        </div>
-                      </div>-->
-                  <div class="row">
-                    <div class="12u">
-      
-                      <!-- Portfolio -->
-                        <section>
-                          <header class="major">
-                            <h2>Derniers sujets</h2>
-                          </header>
-                          <div class="row">
-                            <div class="4u 12u(mobile)">
-                              <section class="box">
-                                <a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-                                <header>
-                                  <h3>Ipsum feugiat et dolor</h3>
-                                </header>
-                                <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                <footer>
-                                  <a href="#" class="button alt">Find out more</a>
-                                </footer>
-                              </section>
-                            </div>
-                            <div class="4u 12u(mobile)">
-                              <section class="box">
-                                <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                                <header>
-                                  <h3>Sed etiam lorem nulla</h3>
-                                </header>
-                                <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                <footer>
-                                  <a href="#" class="button alt">Find out more</a>
-                                </footer>
-                              </section>
-                            </div>
-                            <div class="4u 12u(mobile)">
-                              <section class="box">
-                                <a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-                                <header>
-                                  <h3>Consequat et tempus</h3>
-                                </header>
-                                <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                <footer>
-                                  <a href="#" class="button alt">Find out more</a>
-                                </footer>
-                              </section>
-                            </div>
-                          </div>
-                          <div class="row">
-                            <div class="4u 12u(mobile)">
-                              <section class="box">
-                                <a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-                                <header>
-                                  <h3>Blandit sed adipiscing</h3>
-                                </header>
-                                <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                <footer>
-                                  <a href="#" class="button alt">Find out more</a>
-                                </footer>
-                              </section>
-                            </div>
-                            <div class="4u 12u(mobile)">
-                              <section class="box">
-                                <a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-                                <header>
-                                  <h3>Etiam nisl consequat</h3>
-                                </header>
-                                <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                <footer>
-                                  <a href="#" class="button alt">Find out more</a>
-                                </footer>
-                              </section>
-                            </div>
-                            <div class="4u 12u(mobile)">
-                              <section class="box">
-                                <a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
-                                <header>
-                                  <h3>Dolore nisl feugiat</h3>
-                                </header>
-                                <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
-                                <footer>
-                                  <a href="#" class="button alt">Find out more</a>
-                                </footer>
-                              </section>
-                            </div>
-                          </div>
-                        </section>
-      
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="12u">
-      
-                    </div>
-=======
 <ng-header-nav-bar></ng-header-nav-bar>  
 <div id="app">
   <div id="page-wrapper">  
@@ -205,22 +51,31 @@
                 </div>
                 <div class="row">
                   <div class="12u">
->>>>>>> ceeb8e64618ee5b125bf8d91ebcd5a329b0b5508
                   </div>
                 </div>
               </div>
-      
-            <!-- Footer -->
-              <div id="footer-wrapper">
-                <section id="footer" class="container">
-                      <!-- Copyright -->
-                        <div id="copyright">
-                          <ul class="links">
-                            <li>&copy; Imeria. All rights reserved.</li>
-                          </ul>
-                        </div>
-                </section>
-              </div>
-      
-          </div   
-  </div>
+            </div>
+    
+          <!-- Footer -->
+            <div id="footer-wrapper">
+              <section id="footer" class="container">
+                    <!-- Copyright -->
+                      <div id="copyright">
+                        <ul class="links">
+                          <li>&copy; Imeria. All rights reserved.</li>
+                        </ul>
+                      </div>
+              </section>
+            </div>
+    
+        </div>
+        
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/skel-viewport.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+</div>
