--- a/frontEnd/src/app/header-nav-bar.component.html
+++ b/frontEnd/src/app/header-nav-bar.component.html
@@ -1,7 +1,11 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">Start Bootstrap</a>
+           <!-- Logo --> 
+          <div id="logo">
+              <img src="assets/images/logo_small.png">
+          </div>
+          <a class="navbar-brand" href="#">R&D</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -11,12 +15,6 @@
                 <a class="nav-link" href="#">Home
                   <span class="sr-only">(current)</span>
                 </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
